# ShortVideoAutoCreateService

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
scripts/: bootstrap_env.sh  export_instagram_cookies.md  run_pipeline.sh  setup_capcut_api.sh  start_capcut_server.sh
src/: __init__.py  main.py
src/pipeline/: capcut_builder.py  downloader.py  heygen_generator.py  subtitle_postprocess.py  transcribe.py  video_edit.py
src/utils/: config.py  cost_estimator.py  file_manager.py  logger.py
tests/: test_pipeline.py
